@@ -41,7 +41,8 @@ public class UserService {
     /**
      * Update user profile information
      */
-    public User updateUserProfile(Long userId, String displayName, String displayImage, UserLevel level, Boolean canSell) {
+    public User updateUserProfile(Long userId, String displayName, String displayImage, UserLevel level,
+            Boolean canSell) {
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new RuntimeException("User not found with id: " + userId));
 
@@ -92,7 +93,7 @@ public class UserService {
     public User removeFriend(Long userId, Long friendId) {
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new RuntimeException("User not found with id: " + userId));
-        
+
         user.getFriends().removeIf(friend -> friend.getId().equals(friendId));
         return userRepository.save(user);
     }
@@ -107,8 +108,8 @@ public class UserService {
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new RuntimeException("User not found with id: " + userId));
         return user.getGamesInLibrary().stream()
-                .map(Number::longValue)
-                .collect(Collectors.toList());
+                .map(num -> (Long) num) // Force cast to Long
+                .toList();
     }
 
     /**
@@ -118,7 +119,7 @@ public class UserService {
     public User addGameToLibrary(Long userId, Long gameId) {
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new RuntimeException("User not found with id: " + userId));
-        
+
         // Verify game exists
         gameRepository.findById(gameId)
                 .orElseThrow(() -> new RuntimeException("Game not found with id: " + gameId));
@@ -152,7 +153,7 @@ public class UserService {
     public List<Game> getUserGamesLibraryFull(Long userId) {
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new RuntimeException("User not found with id: " + userId));
-        
+
         return user.getGamesInLibrary().stream()
                 .map(gameId -> gameRepository.findById(gameId.longValue()).orElse(null))
                 .filter(Objects::nonNull)
@@ -180,7 +181,7 @@ public class UserService {
     public User addGameToWishlist(Long userId, Long gameId) {
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new RuntimeException("User not found with id: " + userId));
-        
+
         // Verify game exists
         gameRepository.findById(gameId)
                 .orElseThrow(() -> new RuntimeException("Game not found with id: " + gameId));
@@ -214,7 +215,7 @@ public class UserService {
     public List<Game> getUserWishlistFull(Long userId) {
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new RuntimeException("User not found with id: " + userId));
-        
+
         return user.getWishlist().stream()
                 .map(gameId -> gameRepository.findById(gameId.longValue()).orElse(null))
                 .filter(Objects::nonNull)
@@ -252,7 +253,7 @@ public class UserService {
     public User removeRewardFromUser(Long userId, Long rewardId) {
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new RuntimeException("User not found with id: " + userId));
-        
+
         user.getRewards().removeIf(reward -> reward.getId().equals(rewardId));
         return userRepository.save(user);
     }
@@ -275,7 +276,7 @@ public class UserService {
     public User addNotification(Long userId, Map<String, Object> notification) {
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new RuntimeException("User not found with id: " + userId));
-        
+
         user.getNotifications().add(notification);
         return userRepository.save(user);
     }
@@ -286,7 +287,7 @@ public class UserService {
     public User clearNotifications(Long userId) {
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new RuntimeException("User not found with id: " + userId));
-        
+
         user.getNotifications().clear();
         return userRepository.save(user);
     }
@@ -297,7 +298,7 @@ public class UserService {
     public User removeNotification(Long userId, int notificationIndex) {
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new RuntimeException("User not found with id: " + userId));
-        
+
         if (notificationIndex >= 0 && notificationIndex < user.getNotifications().size()) {
             user.getNotifications().remove(notificationIndex);
         }
@@ -325,7 +326,7 @@ public class UserService {
     public Map<String, Object> getUserStatistics(Long userId) {
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new RuntimeException("User not found with id: " + userId));
-        
+
         Map<String, Object> stats = new HashMap<>();
         stats.put("userId", user.getId());
         stats.put("displayName", user.getDisplayName());
@@ -337,7 +338,7 @@ public class UserService {
         stats.put("totalRewards", user.getRewards().size());
         stats.put("totalPosts", user.getCommunityPosts().size());
         stats.put("unreadNotifications", user.getNotifications().size());
-        
+
         return stats;
     }
 }
